Fix scrollbar on non-sticky grids
ERM32235

[4.x]

--- a/resources/stylesheet/data/grid.less
+++ b/resources/stylesheet/data/grid.less
@@ -2,8 +2,10 @@
 	background-color: white;
 	position: relative;
 	.grid-container {
-		overflow-x: auto;
 		padding-bottom: 10px;
+		&.sticky-container {
+			overflow-x: auto;
+		}
 		.oojsplus-data-gridWidget-table {
 			width: 100%;
 			border-collapse: collapse;
